# trading-bot

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  config.example.json  events.json.example  stock_tags.json
src/: broker.hpp  event_calendar.cpp  event_calendar.hpp  http_client.cpp  http_client.hpp  kis_client.cpp  kis_client.hpp  main.cpp  mock_broker.cpp  mock_broker.hpp  news_crawler.cpp  news_crawler.hpp  sim_broker.cpp  sim_broker.hpp  stock_tags.cpp  stock_tags.hpp  strategy.hpp
tests/: test_strategy.cpp
